Apply review feedback: eagerly compute merged URIs; remove brittle private-field access in test
Agent-Logs-Url: https://github.com/micronaut-projects/micronaut-redis/sessions/54f99655-a3db-47fc-94e5-685d59abeeff

Co-authored-by: graemerocher <66626+graemerocher@users.noreply.github.com>